--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "antd": "^4.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-recaptcha": "^2.0.1",
+    "react-otp-input": "^1.0.1",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -36,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-google-recaptcha": "^1.1.2"
   }
 }
