--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-google-recaptcha": "^2.0.1",
     "react-otp-input": "^1.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-google-recaptcha": "^1.1.2"
+    "@types/react-google-recaptcha": "^1.1.2",
+    "@types/react-router-dom": "^5.1.5"
   }
 }
